--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,8 @@ catkin_package()
 
 # ################## source and driver ######################
 
-add_executable(nbv_ctl src/rc_ctl.cpp)
+add_executable(rc_ctl src/rc_ctl.cpp)
 target_link_libraries(rc_ctl ${catkin_LIBRARIES} ${OpenCV_LIBS} dw)
 
-add_executable(tra_ctl src/traj_ctl.cpp)
+add_executable(traj_ctl src/traj_ctl.cpp)
 target_link_libraries(traj_ctl ${catkin_LIBRARIES} ${OpenCV_LIBS} dw)
